Style login page in CMS | Fix post preview cards in View Posts tab of CMS where buttons were misaligned

--- a/cms/src/styles/cms-viewall.css
+++ b/cms/src/styles/cms-viewall.css
@@ -27,6 +27,14 @@
   width: 100%;
 }
 
+.post-view-body {
+  min-height: 40px;
+}
+
+.post-view-body p {
+  margin: 0;
+}
+
 .post-link-button {
   height: 38px;
   width: 80px;
